opdateret småting på login-side

--- a/login-page/login-page.html
+++ b/login-page/login-page.html
@@ -16,7 +16,7 @@
     rel="stylesheet">-->
   
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
 
     <!-- eget stylesheet-->
   <link rel="stylesheet" href="login-page.css">
@@ -28,8 +28,8 @@
   <main id="main-holder">
     
     <!--<img src="media/whatthebox_logo.png" alt="Logo for what the box" height="100">-->
-    <h1 id="login-header">The lost gold</h1>
-    <img src="media/Submarine.png" alt="Logo for what the box" height="100">
+    <h1 id="login-header">U-534</h1>
+    <img src="media/Submarine_2.png" alt="Logo for what the box" height="60">
     
     <div id="login-error-msg-holder">
       <p id="login-error-msg">Tjek koden én ekstra gang ;-)</p>
