--- a/login-page/login-page.html
+++ b/login-page/login-page.html
@@ -7,13 +7,6 @@
   <title>Login</title>
   
     <!-- Google fonts -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <!--<link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">-->
   
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
@@ -29,7 +22,7 @@
     
     <!--<img src="media/whatthebox_logo.png" alt="Logo for what the box" height="100">-->
     <h1 id="login-header">U-534</h1>
-    <img src="media/Submarine_2.png" alt="Logo for what the box" height="60">
+    <img src="media/Submarine.png" alt="Logo for what the box" height="100">
     
     <div id="login-error-msg-holder">
       <p id="login-error-msg">Tjek koden én ekstra gang ;-)</p>
