--- a/lobby/index.html
+++ b/lobby/index.html
@@ -8,49 +8,42 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="custom.css">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js" defer></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" defer></script>
-    <![endif]-->
+
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   </head>
   <body>
+    <div id="robot">
+      <div class="col">
+        <video controls width="900">
+          <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+          <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
+          <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
+          <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
+        </video>
+        <h4>Dykker Cam</h4>
+      </div>
 
-    <div class="wrapper">
-      <div class="inner">
-        <div class="col">
-          <video controls>
+      <div class="wrapper">
+
+      </div>
+      <div id="participants1" class="inner">
+        <div class="col" >
+          <video controls width="250">
             <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
             <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
             <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
             <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
           </video>
-          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
-          <a href="#">Some Link</a>
         </div>
       </div>
-      <div class="inner">
+      <div id="participants2" class="inner">
         <div class="col">
-          <video controls>
+          <video controls width="250">
             <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
             <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
             <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
             <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
           </video>
-          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
-          <a href="#">Some Link</a>
-        </div>
-      </div>
-      <div class="inner">
-        <div class="col">
-          <video controls>
-            <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
-            <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-            <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
-            <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-          </video>
-          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
-          <a href="#">Some Link</a>
         </div>
       </div>
     </div>
