--- a/lobby/index.html
+++ b/lobby/index.html
@@ -12,41 +12,42 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   </head>
   <body>
-    <div id="robot">
-      <div class="col">
-        <video controls width="900">
-          <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
-          <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-          <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
-          <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-        </video>
-        <h4>Dykker Cam</h4>
-      </div>
-
-      <div class="wrapper">
-
-      </div>
-      <div id="participants1" class="inner">
-        <div class="col" >
-          <video controls width="250">
-            <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
-            <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-            <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
-            <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-          </video>
-        </div>
-      </div>
-      <div id="participants2" class="inner">
+    <div class="wrapall">
+      <div id="robot">
         <div class="col">
-          <video controls width="250">
+          <video controls width="1080">
             <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
             <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
             <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
             <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
           </video>
+          <h4>Dykker Cam</h4>
+        </div>
+
+        <div class="wrapper">
+
+        </div>
+        <div id="participants1" class="inner">
+          <div class="col" >
+            <video controls width="250">
+              <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+              <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
+              <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
+              <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
+            </video>
+          </div>
+        </div>
+        <div id="participants2" class="inner">
+          <div class="col">
+            <video controls width="250">
+              <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+              <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
+              <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
+              <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
+            </video>
+          </div>
         </div>
       </div>
-    </div>
-
+  </div>
   </body>
 </html>
