--- a/login-page/login-page.html
+++ b/login-page/login-page.html
@@ -23,7 +23,7 @@
       <img id="submarine" src="media/submarine_footer4.png" alt="footer-image of submarine">
     
       <div id="login-error-msg-holder">
-        <p id="login-error-msg">Tjek koden én ekstra gang ;-)</p>
+        <p id="login-error-msg">Tjek koden en ekstra gang ;-)</p>
       </div>
       
       <form id="login-form">
