--- a/lobby/index.html
+++ b/lobby/index.html
@@ -24,30 +24,30 @@
           <h4>Dykker Cam</h4>
         </div>
 
-        <div class="wrapper">
+        <div class="participant-wrap">
 
-        </div>
-        <div id="participants1" class="inner">
-          <div class="col" >
-            <video controls width="250">
-              <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
-              <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-              <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
-              <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-            </video>
+          </div>
+          <div id="participants1" class="inner">
+            <div class="col" >
+              <video controls width="250">
+                <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+                <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
+                <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
+                <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
+              </video>
+            </div>
+          </div>
+          <div id="participants2" class="inner">
+            <div class="col">
+              <video controls width="250">
+                <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+                <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
+                <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
+                <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
+              </video>
+            </div>
           </div>
         </div>
-        <div id="participants2" class="inner">
-          <div class="col">
-            <video controls width="250">
-              <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
-              <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
-              <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
-              <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-            </video>
-          </div>
-        </div>
-      </div>
   </div>
   </body>
 </html>
