--- a/lobby/sample-multiple/index.html
+++ b/lobby/sample-multiple/index.html
@@ -20,12 +20,18 @@
 
     <base target="_blank">
 
-    <title>Multiple peer connections</title>
+    <title>U-534 - The Lost Gold</title>
 
     <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../../../css/main.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+
+    <!-- Google fonts -->
+  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -33,30 +39,26 @@
 
 <div id="container">
 
-    <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>Multiple peer connections</span>
-    </h1>
+    <h1 id="login-header">U-534</h1>
 
-    <video id="video1" playsinline autoplay muted></video>
-    <video id="video2" playsinline autoplay></video>
-    <video id="video3" playsinline autoplay></video>
-
-    <div>
+    <div class="buttons">
         <button id="startButton">Start</button>
         <button id="callButton">Call</button>
         <button id="hangupButton">Hang Up</button>
-    </div>
+    </div>    
+        <div class="robot">
+            <video id="video1" playsinline autoplay muted></video>
+        </div>
+        <div class="wrap-participants">
+            <video class="participant-videos" id="video2" playsinline autoplay></video>
+            <video class="participant-videos" id="video3" playsinline autoplay></video>
+        </div>    
+
 
     <p>View the console to see logging and to inspect the <code>MediaStream</code> object <code>localStream</code>.</p>
 
-    <p>For more information about RTCPeerConnection, see <a href="http://www.html5rocks.com/en/tutorials/webrtc/basics/"
-                                                            title="HTML5 Rocks article about WebRTC by Sam Dutton">Getting
-        Started With WebRTC</a>.</p>
-
-
-    <a href="https://github.com/webrtc/samples/tree/gh-pages/src/content/peerconnection/multiple"
-       title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
-
 </div>
+<p id="thelostgold-footertext">THE LOST GOLD</p>
 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
