--- a/login-page/login-page.html
+++ b/login-page/login-page.html
@@ -18,7 +18,8 @@
 
 <body>
   
-    <div>
+    <div id="page-container">
+      <div id="content-wrap">
       <h1 id="login-header">U-534</h1>
       <img id="submarine" src="media/submarine_footer4.png" alt="footer-image of submarine">
     
@@ -31,6 +32,7 @@
         <input type="text" name="password" id="password-field" class="login-form-field" placeholder="Svaret på gåden">
         <input type="submit" value="Rejsen begynder her" id="login-form-submit">
       </form>
+    </div>
       <p id="thelostgold-footertext">THE LOST GOLD</p>
     </div>
 
