--- a/lobby/sample-multiple/index.html
+++ b/lobby/sample-multiple/index.html
@@ -50,7 +50,7 @@
             <video id="video1" playsinline autoplay muted></video>
         </div>
 
-        <div class="wrapparticipants">
+        <div class="wrapperticipants">
             <video class="participantvideos" id="video2" playsinline autoplay></video>
             <video class="participantvideos" id="video3" playsinline autoplay></video>
         </div>    
