--- a/lobby/sample-multiple/index.html
+++ b/lobby/sample-multiple/index.html
@@ -38,6 +38,8 @@
 
     <h1 id="login-header">U-534</h1>
 
+    <img id="submarine" src="media/submarine_footer4.png" alt="footer-image of submarine">
+    
     <div id="wrapall">
 
         <div class="buttons">
