--- a/lobby/index.html
+++ b/lobby/index.html
@@ -59,7 +59,7 @@
         <video id="video1" playsinline autoplay muted> 
         Din browser understøtter ikke video-afvikling. Prøv en anden browser. Your browser does not support the video tag.</video>
 
-<!--    <button id="fullscreenbutton" onclick="openFullscreen();">Udvid til fuld skærm</button>*/-->
+    <button id="fullscreenbutton" onclick="openFullscreen();">Udvid til fuld skærm</button>
     </div>
     
  
