--- a/lobby/index.html
+++ b/lobby/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <div id="header">
-        <h1 id="headertext">U-534</h1>
+        <h1 id="headertext">U-534-1</h1>
 
         <button id="startButton">Start</button>
         <button id="callButton">Call</button>
