--- a/lobby/index.html
+++ b/lobby/index.html
@@ -38,9 +38,9 @@
     <div id="header">
         <h1 id="headertext">U-534-2</h1>
 
-        <button id="startButton">Start</button>
-        <button id="callButton">Call</button>
-        <button id="hangupButton">Hang Up</button>
+        <button class="webrtcbuttons" id="startButton">Start</button>
+        <button class="webrtcbuttons" id="callButton">Call</button>
+        <button class="webrtcbuttons" id="hangupButton">Hang Up</button>
 
     </div>
 
