--- a/lobby/index.html
+++ b/lobby/index.html
@@ -44,7 +44,7 @@
 
     </div>
 
-    <img id="submarine" src="media/submarine_footer4.png" alt="footer-image of submarine">
+    <!--<img id="submarine" src="media/submarine_footer4.png" alt="footer-image of submarine">-->
     
     <div id="wrapall">
         <div id="participants">
