change to mission blitz

--- a/lobby/index.html
+++ b/lobby/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <div id="header">
-        <h1 id="headertext">U-534-3</h1>
+        <h1 id="headertext">U357</h1>
 
         <button class="webrtcbuttons" id="startButton">Start</button>
         <button class="webrtcbuttons" id="callButton">Call</button>
@@ -65,7 +65,7 @@
  
     <div id="footer">
     
-        <p id="thelostgold-footertext">THE LOST GOLD</p>
+        <p id="thelostgold-footertext">MISSION BLITZ</p>
     
     </div>
 
