Change to BLITZ MISSION

--- a/lobby/index.html
+++ b/lobby/index.html
@@ -65,7 +65,7 @@
  
     <div id="footer">
     
-        <p id="thelostgold-footertext">MISSION BLITZ</p>
+        <p id="thelostgold-footertext">BLITZ MISSION</p>
     
     </div>
 
