--- a/login-page/login-page.html
+++ b/login-page/login-page.html
@@ -32,7 +32,7 @@
         <input type="text" name="password" id="password-field" class="login-form-field" placeholder="Svaret på gåden">
         <input type="submit" value="Rejsen begynder her" id="login-form-submit">
         
-        <p >MISSION BLITZ</p>
+        <p >BLITZ MISSION</p>
       </form>
       
   
