--- a/webrtc/public/index.html
+++ b/webrtc/public/index.html
@@ -26,7 +26,7 @@
             
     </div>
 
-<!--    <div id="input-room-row" class="row">
+<div id="input-room-row" class="row">
         <div class="">
             <div class="input-field">
                 <input id="room" type="text" class="validate">
@@ -36,12 +36,12 @@
                 </button>
             </div>
         </div>
-    </div>-->
+    </div>
     
-<!--    <div id="current-room-row" class="row hide">
+<div id="current-room-row" class="row hide">
         <div class="center-align">
         </div>
-    </div>-->
+    </div>
     <div id="wrapall" >
 
     <div class="row" id="participants">
