--- a/webrtc/public/index.html
+++ b/webrtc/public/index.html
@@ -43,11 +43,11 @@
 
         <div class="col s12 m6 hide" id="remote-view-container">
             <h5>Remote</h5>
-            <video id="remote-view" class="responsive-video width-100 z-depth-2" autoplay></video>
+            <video class="remote" id="remote-view" class="responsive-video width-100 z-depth-2" autoplay></video>
         </div>
 
         <div class="col s12 m6 hide" id="remote-view-container2">
-            <video id="remote-view2" class="responsive-video width-100 z-depth-2" autoplay></video>
+            <video class="remote" id="remote-view2" class="responsive-video width-100 z-depth-2" autoplay></video>
         </div>
     </div>
     <div class="row">
