--- a/webrtc_new_current/public/index.html
+++ b/webrtc_new_current/public/index.html
@@ -40,10 +40,18 @@
             <h5>Local</h5>
             <video id="self-view" class="responsive-video width-100 z-depth-2" autoplay></video>
         </div>
-        <div class="col s12 m6 hide" id="remote-view-container">
+
+        <div class="col s12 m6 hide available" id="remote-view-container">
             <h5>Remote</h5>
             <video id="remote-view" class="responsive-video width-100 z-depth-2" autoplay></video>
         </div>
+
+        <div class="col s12 m6 hide available" id="remote-view-container2">
+            <h5>Remote2</h5>
+            <video id="remote-view2" class="responsive-video width-100 z-depth-2" autoplay></video>
+        </div>
+
+
     </div>
     <div class="row">
     </div>
