--- a/rtcmulticonnection_current/demos/video-conferencing.html
+++ b/rtcmulticonnection_current/demos/video-conferencing.html
@@ -5,7 +5,7 @@
   <title>Video Conferencing using RTCMultiConnection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="shortcut icon" href="/demos/logo.png">
-  <link rel="stylesheet" href="/demos/stylesheet.css">
+  <!--<link rel="stylesheet" href="/demos/stylesheet.css">-->
   <link rel="stylesheet" href="css/main.css"/>
 
   <!-- Google fonts -->
@@ -55,7 +55,7 @@
   
   
 </div>
-<button id="fullscreenbutton" onclick="openFullscreen();">Udvid til fuld skærm</button>
+<!--<button id="fullscreenbutton" onclick="openFullscreen();">Udvid til fuld skærm</button>-->
 
     <div id="videos-container" style="margin: 20px 0;"></div>
 
